// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note A basic note to call out information on a page. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "borderRadius": "4px",
      "color": "#587594",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.5008"
        rx="5.2192"
        ry="5.2192"
        transform="translate(0.6201 -0.5605) rotate(0.6049)"
        width="52.2541"
        x="27.2732"
        y="41.2042"
      />
      <path
        d="M64.1,34.8478s-9.9116-.76-10.0085,8.42-.0922,24.7363-.0922,24.7363,4.823-3.0455,8.79-3.0037l15.4041.1626A1.7881,1.7881,0,0,0,80,63.3935L80.281,36.792A1.7732,1.7732,0,0,0,78.5267,35Z"
        fill="#309ef9"
      />
      <path
        d="M43.971,34.157s10.21-.5625,10.1107,8.821S53.997,68,53.997,68s-5.25-2.9574-9.3313-3.0005L28.78,64.8314A1.7863,1.7863,0,0,1,27,63.04l.2881-27.2857A1.7863,1.7863,0,0,1,29.1058,34Z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Note
    </div>
    <p>
      Here is a little thing to note.
    </p>
  </div>
</div>
`;

exports[`note A note to display an error with steps or links on how to troubleshoot. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#fbe5e5",
      "borderRadius": "4px",
      "color": "#ba3b3f",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      className="color-red"
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="30"
        cy="30"
        fill="#ffb9a9"
        r="25"
      />
      <path
        d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
        fill="#d85a3d"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Error
    </div>
    <p>
      Did something not go as planned? Check out the
       
      <a
        href="#"
      >
        troubleshooting guide
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`note A note to display with a message about new products or features. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#e8f5ee",
      "borderRadius": "4px",
      "color": "#1b7d4f",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="29.4"
        cy="30.3"
        fill="#83e5af"
        r="25"
      />
      <path
        d="M39.6,26.4c0,5.4-7.8,14.9-10.1,17.9c-2.4-3-10.1-12.5-10.1-17.9s5.2-10.1,10.1-10.1S39.6,21.1,39.6,26.4z"
        fill="#3dbc7d"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      New!
    </div>
    <p>
      Check out the new 
      <a
        href="#"
      >
        Pizza API
      </a>
      . Build the perfect pie!
    </p>
  </div>
</div>
`;

exports[`note A warning note to let the user know something has changed or will change. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#feefe2",
      "borderRadius": "4px",
      "color": "#945823",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      className="color-orange"
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="30"
        cy="30"
        fill="#fbcea6"
        r="25"
      />
      <path
        d="M30,15.7c-1.3,0-2.7,0.7-3.3,1.8l-9.6,20.4c-1.1,1.8,0,4.4,2.4,4.4H30h10.4c2.4,0,3.6-2.7,2.4-4.4l-9.6-20.4 C32.7,16.3,31.3,15.7,30,15.7z M30,22.3c1.3,0,2.2,0.9,2.2,2.2V29c0,1.3-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2v-4.4 C27.8,23.2,28.7,22.3,30,22.3z M30,33.4c1.3,0,2.2,0.9,2.2,2.2s-0.9,2.2-2.2,2.2c-1.3,0-2.2-0.9-2.2-2.2S28.7,33.4,30,33.4z"
        fill="#ba7334"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      This API is in beta
    </div>
    <p>
      The API may change without advance notice during the preview period. Preview features are not supported for production use.
    </p>
  </div>
</div>
`;

exports[`note Note with custom title. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "borderRadius": "4px",
      "color": "#587594",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.5008"
        rx="5.2192"
        ry="5.2192"
        transform="translate(0.6201 -0.5605) rotate(0.6049)"
        width="52.2541"
        x="27.2732"
        y="41.2042"
      />
      <path
        d="M64.1,34.8478s-9.9116-.76-10.0085,8.42-.0922,24.7363-.0922,24.7363,4.823-3.0455,8.79-3.0037l15.4041.1626A1.7881,1.7881,0,0,0,80,63.3935L80.281,36.792A1.7732,1.7732,0,0,0,78.5267,35Z"
        fill="#309ef9"
      />
      <path
        d="M43.971,34.157s10.21-.5625,10.1107,8.821S53.997,68,53.997,68s-5.25-2.9574-9.3313-3.0005L28.78,64.8314A1.7863,1.7863,0,0,1,27,63.04l.2881-27.2857A1.7863,1.7863,0,0,1,29.1058,34Z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      A very important note
    </div>
    <div>
      <p>
        Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Etiam porta sem malesuada magna mollis euismod. Etiam porta sem malesuada magna mollis euismod.
      </p>
    </div>
  </div>
</div>
`;
